VZDEV/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CCPM_leadType__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Campaign</fullName>
                </value>
                <value>
                    <fullName>Customer SFDC Manual</fullName>
                </value>
                <value>
                    <fullName>Prospect SFDC Manual</fullName>
                </value>
                <value>
                    <fullName>Customer POS Manual</fullName>
                </value>
                <value>
                    <fullName>Customer Quotes</fullName>
                </value>
                <value>
                    <fullName>Customer Telesales POS Manual</fullName>
                </value>
                <value>
                    <fullName>Customer Telesales SFDC Manual</fullName>
                </value>
                <value>
                    <fullName>Prospect Telesales SFDC Manual</fullName>
                </value>
                <value>
                    <fullName>Customer Abandoned Cart Retail</fullName>
                </value>
                <value>
                    <fullName>Customer Abandoned Cart Digital</fullName>
                </value>
                <value>
                    <fullName>Prospect Abandoned Cart Retail</fullName>
                </value>
                <value>
                    <fullName>Prospect Abandoned Cart Digital</fullName>
                </value>
                <value>
                    <fullName>Customer Abandoned Cart</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Customer Abandoned Visit</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Prospect Abandoned Cart</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_manualLeadSMSBody__c</fullName>
        <formula>&apos;Hi, this is &apos; + Owner:User.FirstName + &apos; from VZW &apos;+Store__r.Name+&apos;. Come back and visit to chat about the items you inquired about. Fastest service is between &apos;+Store__r.CCPM_recommendedVisitingHours__c+&apos;.%&apos;
+&apos;For an appt let me know what time/day works for you. Reply &quot;E&quot; to unsubscribe from messages regarding this inquiry. (FreeVzMsg)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manual Lead 1st SMS body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_mergeMasterID__c</fullName>
        <description>Merge Master Prospect Record ID</description>
        <inlineHelpText>Merge Master Prospect Record ID</inlineHelpText>
        <label>Merge Master Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_mfToBeMerged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MF To Be Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_mobileNumber__c</fullName>
        <description>Mobile number which has been used to create the cart</description>
        <encrypted>true</encrypted>
        <inlineHelpText>Mobile number of the lead / prospect</inlineHelpText>
        <label>MTN</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCPM_originatingRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCPM_originatingRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_originatingStore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Store</label>
        <referenceTo>CCPM_Store__c</referenceTo>
        <relationshipLabel>Leads (Originating Store)</relationshipLabel>
        <relationshipName>CCPM_originatingStore</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_ownerEcode__c</fullName>
        <formula>Owner:User.CCPM_commissionableRepID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Ecode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_ownerFirstName__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_ownershipChangedDateTime__c</fullName>
        <description>Holds the date/time when ownership was changed</description>
        <label>Ownership Changed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_previousLeadStatus__c</fullName>
        <description>Stores the previous lead status and sub-status when either lead status or sub-status is changed</description>
        <label>Previous Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_promoFirstSentDate_Time__c</fullName>
        <label>Promo 1 Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_promoFirstSent__c</fullName>
        <label>Promo 1 Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_promoSecondSentDate_Time__c</fullName>
        <label>Promo 2 Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_promoSecondSent__c</fullName>
        <label>Promo 2 Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_prospectInitialSMSBody__c</fullName>
        <formula>&quot;Verizon:There&apos;s a great item waiting in your cart. Complete your purchase today in person at &quot;+ Store__r.Name + &apos;. Fastest service is between &apos;+Store__r.CCPM_recommendedVisitingHours__c + &apos;.%For an appt let us know what time/day works for you. Reply &quot;E&quot; to unsubscribe from messages on this inquiry. Msg-Data rates may apply.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Initial SMS Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_prospectSMSBodyPartII__c</fullName>
        <formula>&apos;Would you like to book an appt &apos; + Store__r.CCPM_recommendedVisitingHours__c + &apos;. What time/day works for you? Or visit us online: http://vzw.com Reply &quot;X&quot; to stop msgs. (FreeVzMsg)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect 1st SMS Body Part II</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_prospectSMSBodyPartI__c</fullName>
        <description>SMS body part 1 of Prospect 1st SMS.</description>
        <formula>&quot;Hi, &quot;+Owner:User.FirstName + &quot; here from Verizon. Come visit us at the &quot;+Store__r.Name + &quot; store to chat about the items you inquired about (FreeVzMsg).&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect 1st SMS Body Part I</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_prospectSMSBody__c</fullName>
        <formula>&apos;Hi, this is &apos;+ Owner:User.FirstName+&apos; from VZW &apos;+Store__r.Name+&apos;. Come back and visit to chat about the items you inquired about. Fastest service is between &apos; + Store__r.CCPM_recommendedVisitingHours__c+&apos;.%For an appt let me know what time/day works for you. Reply &quot;E&quot; to unsubscribe from messages regarding this inquiry. Msg-Data rates may apply.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect 1st SMS body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_prospectSMSSentDate__c</fullName>
        <label>Event Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_qualifiedDateTime__c</fullName>
        <description>This field captures the Date/Time when the status is Qualified.</description>
        <inlineHelpText>This field captures the Date/Time when the status is Qualified.</inlineHelpText>
        <label>Qualified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_qualifiedSubStatusForPreDefinedSMS__c</fullName>
        <label>Qualified SubStatus For PreDefinedSMS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Discussion</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Appointment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Needs Store Reassignment</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Disinterested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_quickNotesDescription__c</fullName>
        <inlineHelpText>Conversation Category</inlineHelpText>
        <label>Quick Notes Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Frustrations with current Non-VZW Carrier</fullName>
                </value>
                <value>
                    <fullName>Looking for new service</fullName>
                </value>
                <value>
                    <fullName>Looking for additional product</fullName>
                </value>
                <value>
                    <fullName>Trying to switch type of device</fullName>
                </value>
                <value>
                    <fullName>New activation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_quickNotes__c</fullName>
        <inlineHelpText>Conversation Details</inlineHelpText>
        <label>Quick Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_reasonForPurchase__c</fullName>
        <description>Describes the reason for product purchase</description>
        <inlineHelpText>What brought them into the store</inlineHelpText>
        <label>Reason for Purchase?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Terminating contract with competitor</fullName>
                </value>
                <value>
                    <fullName>Brand new account</fullName>
                </value>
                <value>
                    <fullName>Gift for family member</fullName>
                </value>
                <value>
                    <fullName>Expecting better coverage with VZW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_reminder__c</fullName>
        <label>Reminder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_sendFollowUpSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to trigger process builder for Follow Up SMS</description>
        <label>Send Follow-Up SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_sendInitialSMSPart1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the first part of the initial sms is sent</description>
        <label>Send Initial SMS Part 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_sendInitialSMSPart2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Initial SMS Part 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_sendLeadsRequiringActionSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to trigger the SMS to Store Managers and Assistant Managers to Trigger SMS for Leads or Prospects Requiring Action</description>
        <label>Send Leads Requiring Action SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_smsOptOutAccount__c</fullName>
        <formula>CCPM_Account__r.CCPM_SMSOptOut__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_storeDistrict__c</fullName>
        <formula>Store__r.CCPM_district__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeEcode__c</fullName>
        <formula>(Store__r.CCPM_storeEcode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Ecode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeIDReference__c</fullName>
        <description>Formula field for the related store&apos;s Store ID</description>
        <formula>Store__r.CCPM_storeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store ID Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeID__c</fullName>
        <description>ID of store / outlet where customer has transacted</description>
        <label>Store ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store Manager of the Verizon store that this lead is associated with.</description>
        <inlineHelpText>Store Manager of the Verizon store that this lead is associated with.</inlineHelpText>
        <label>Store Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_storeMarket__c</fullName>
        <formula>Store__r.CCPM_market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeName__c</fullName>
        <formula>Store__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeRecommendedHours__c</fullName>
        <description>Formula field to store Recommended Visiting Hours</description>
        <formula>Store__r.CCPM_recommendedVisitingHours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to store Recommended Visiting Hours</inlineHelpText>
        <label>Store Recommended Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeTerritory__c</fullName>
        <formula>Store__r.CCPM_territory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_timeToQualify__c</fullName>
        <formula>IF(AND(TEXT(Status)==&apos;Responded&apos;,TEXT( CCPM_leadSubStatus__c )==&apos;Action Required&apos;), (NOW() - CCPM_SMSResponseReceivedDateTime__c)*24 , IF( AND(NOT(ISNULL(CCPM_SMSResponseReceivedDateTime__c)),NOT(ISNULL(CCPM_qualifiedDateTime__c ))) , (CCPM_qualifiedDateTime__c - CCPM_SMSResponseReceivedDateTime__c)*24 , null) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time To Qualify</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_tobeMerged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Merge Flag for the Prospect Cart</description>
        <inlineHelpText>Merge Flag for the Prospect Cart</inlineHelpText>
        <label>To Be Merged ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_triggerFollowupSMSDateTime__c</fullName>
        <description>Date/Time to trigger follow up SMS based on when the initial SMS is sent. This field is populated via Process Builder</description>
        <label>Trigger Follow-Up SMS Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_triggerInitialSMSDateTime__c</fullName>
        <description>Holds the date/time to trigger initial sms based on business hours and creation date/time of cart + 3 hours. Adds 3 hours to standard createdDate and then calculates the new date based on business hours</description>
        <label>Trigger Initial SMS Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_triggerProspectSMSPart1__c</fullName>
        <description>Trigger Prospect SMS Date/Time Part 1</description>
        <label>Trigger Prospect 1st SMS Date Part I</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_triggerProspectSMSPartII__c</fullName>
        <formula>CCPM_triggerProspectSMSPart1__c +((60/3600)/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Prospect 1st SMS Date Part II</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_usstate__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CCPM_country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_whenIsTheirContractUp__c</fullName>
        <label>When is their contract up?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Mobile_Opt__c</fullName>
        <formula>CCPM_Account__r.CCPM_SMSOptOut__c</formula>
        <label>Customer Mobile Opt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US-0024 :: Reference of the nearest store of the prospect based on customer&apos;s history</description>
        <inlineHelpText>Verizon store that this lead is associated with.</inlineHelpText>
        <label>Store</label>
        <referenceTo>CCPM_Store__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpm_reasonForAbandon__c</fullName>
        <description>This field represents the list of reasons why the Lead abandoned the Store after checking in to the store</description>
        <inlineHelpText>This field represents the list of reasons why the Lead abandoned the Store after checking in to the store</inlineHelpText>
        <label>Reason for Abandon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left Unassigned</fullName>
                </value>
                <value>
                    <fullName>Duplicate or Invalid Entry</fullName>
                </value>
                <value>
                    <fullName>Not ready to purchase</fullName>
                </value>
                <value>
                    <fullName>Questions answered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>CCPM_ActionRequired</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CCPM_Type__c</columns>
        <columns>CCPM_SMSResponseReceivedDateTime__c</columns>
        <columns>CCPM_leadOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Responded</value>
        </filters>
        <filters>
            <field>CCPM_leadSubStatus__c</field>
            <operation>equals</operation>
            <value>Action Required</value>
        </filters>
        <label>Action Required</label>
    </listViews>
    <listViews>
        <fullName>CCPM_ActiveAbandonedCarts</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CCPM_leadSubStatus__c</columns>
        <columns>CCPM_cartType__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CCPM_leadOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CCPM_Type__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>New,Converted,Expired,Dismissed</value>
        </filters>
        <label>Active Abandoned Carts</label>
    </listViews>
    <listViews>
        <fullName>CCPM_ActiveCampaigns</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CCPM_leadSubStatus__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CCPM_leadOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CCPM_Type__c</field>
            <operation>equals</operation>
            <value>Campaign Lead</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>New,Converted,Expired,Dismissed</value>
        </filters>
        <label>Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>CCPM_Active_Leads_with_Quotes</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CCPM_leadSubStatus__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CCPM_QuoteID__c</columns>
        <columns>CCPM_SKU__c</columns>
        <columns>CCPM_leadOwner__c</columns>
        <columns>CCPM_QuoteNotes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CCPM_leadType__c</field>
            <operation>equals</operation>
            <value>Customer Quotes</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Converted,Expired</value>
        </filters>
        <filters>
            <field>CCPM_Lead_status_substatus__c</field>
            <operation>notEqual</operation>
            <value>Responded-disinterested,Responded-cart disinterested,Responded-opted out</value>
        </filters>
        <filters>
            <field>CCPM_Lead_status_substatus__c</field>
            <operation>notEqual</operation>
            <value>Qualified-disinterested</value>
        </filters>
        <label>Active Leads with Quotes</label>
    </listViews>
    <listViews>
        <fullName>CCPM_AppointmentScheduled</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CCPM_Type__c</columns>
        <columns>CCPM_lastInteraction__c</columns>
        <columns>CCPM_leadOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>CCPM_leadSubStatus__c</field>
            <operation>equals</operation>
            <value>Appointment Scheduled</value>
        </filters>
        <label>Appointment Scheduled</label>
    </listViews>
    <listViews>
        <fullName>CCPM_Contactedthisweek</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CCPM_Type__c</columns>
        <columns>CCPM_lastInteraction__c</columns>
        <columns>CCPM_leadOwner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CCPM_prospectSMSSentDate__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CCPM_initialSMSSentDateTime__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CCPM_followUpSMSDate__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Contacted this week</label>
    </listViews>
    <listViews>
        <fullName>CCPM_GreatLakesUnassignedQueue</fullName>
        <columns>Store__c</columns>
        <columns>CCPM_storeID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CCPM_leadSubStatus__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CCPM_SMSResponseReceivedDateTime__c</columns>
        <columns>LEAD.ZIP</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Lead.CCPM_quarantined</value>
        </filters>
        <label>Great Lakes Unassigned Queue</label>
        <queue>CCPM_GreatLakes</queue>
        <sharedTo>
            <group>CCPM_GreatLakes</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCPM_HQTelesales_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>HQ-Telesales</label>
        <queue>CCPM_HQTelesales</queue>
        <sharedTo>
            <group>CCPM_HQTelesales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCPM_HeadquartersUnassignedQueue</fullName>
        <columns>Store__c</columns>
        <columns>CCPM_storeID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CCPM_leadSubStatus__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CCPM_SMSResponseReceivedDateTime__c</columns>
        <columns>LEAD.ZIP</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Lead.CCPM_quarantined</value>
        </filters>
        <label>Headquarters Unassigned Queue</label>
        <queue>CCPM_OwnershipQueue</queue>
        <sharedTo>
            <group>CCPM_OwnershipManagement</group>
        </sharedTo>
    </listViews>
</CustomObject>